--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "1.0.0",
   "description": "my first gulp build",
   "author": "fluxionbeats",
+  "scripts": {
+    "gulp": "gulp"
+  },
   "devDependencies": {
     "browser-sync": "^2.27.11",
     "del": "^6.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-cssbeautify": "^3.0.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-eslint": "^6.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^4.0.0",
     "gulp-plumber": "^1.2.1",
